# dioxus-feed

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
assets/images/: sample10.avif  sample11.avif  sample12.avif  sample13.avif  sample7.avif  sample8.avif  sample9.avif
src/: main.rs
src/components/: feed.rs  feed_item.rs  mod.rs  virtual_list.rs
src/protocol/: mod.rs  myprotocol.rs
